@@ -1871,28 +1871,42 @@ def ElementTree(_Element element=None, file=None, _BaseParser parser=None):
 
     return _elementTreeFactory(doc, element)
 
-def HTML(text, _BaseParser parser=None):
+def HTML(text, _BaseParser parser=None, base_url=None):
     """Parses an HTML document from a string constant. This function can be used
     to embed "HTML literals" in Python code.
+
+    To override the parser with a different ``HTMLParser`` you can pass it to
+    the ``parser`` keyword argument.
+
+    The ``base_url`` keyword argument allows to set the original base URL of
+    the document to support relative Paths when looking up external entities
+    (DTD, XInclude, ...).
     """
     cdef _Document doc
     if parser is None:
         parser = __GLOBAL_PARSER_CONTEXT.getDefaultParser()
         if not isinstance(parser, HTMLParser):
             parser = __DEFAULT_HTML_PARSER
-    doc = _parseMemoryDocument(text, None, parser)
+    doc = _parseMemoryDocument(text, base_url, parser)
     return doc.getroot()
 
-def XML(text, _BaseParser parser=None):
+def XML(text, _BaseParser parser=None, base_url=None):
     """Parses an XML document from a string constant. This function can be used
     to embed "XML literals" in Python code.
+
+    To override the parser with a different ``XMLParser`` you can pass it to
+    the ``parser`` keyword argument.
+
+    The ``base_url`` keyword argument allows to set the original base URL of
+    the document to support relative Paths when looking up external entities
+    (DTD, XInclude, ...).
     """
     cdef _Document doc
     if parser is None:
         parser = __GLOBAL_PARSER_CONTEXT.getDefaultParser()
         if not isinstance(parser, XMLParser):
             parser = __DEFAULT_XML_PARSER
-    doc = _parseMemoryDocument(text, None, parser)
+    doc = _parseMemoryDocument(text, base_url, parser)
     return doc.getroot()
 
 fromstring = XML
